cliente/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
# Permitir loopback
-A INPUT -i lo -j ACCEPT
# Permitir tráfego já estabelecido
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# SSH, HTTP, HTTPS, LDAP, FTP (21 ativo, 990 FTPS)
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp --dport 389 -j ACCEPT
-A INPUT -p tcp --dport 21 -j ACCEPT
-A INPUT -p tcp --dport 990 -j ACCEPT
COMMIT
